Tests, Jacoco Report, Admin Panel, Role Based Access Done