@@ -20,46 +20,57 @@ import org.springframework.data.jpa.domain.Specification;
 import org.springframework.stereotype.Service;
 import org.springframework.transaction.annotation.Transactional;
 
-import java.math.BigDecimal;
 import java.util.Collections;
 import java.util.List;
-import java.util.Optional;
-import java.util.stream.Collectors;
 
 @Service
-public class CustomerService {
+public class CustomerService implements CustomerServiceInterface {
 
     private static final Logger logger = LoggerFactory.getLogger(CustomerService.class);
 
-    @Autowired
-    private CustomerRepository customerRepository;
+    // --- Sonar: Constants for repeated string literals ---
+    private static final String CUSTOMER_NOT_FOUND_MSG = "Customer with ID %d not found.";
+    private static final String CUSTOMER_NOT_FOUND_GENERIC = "Customer not found with ID: %d";
+    private static final String CANNOT_ACTIVATE_NO_SPLITTER_MSG = "Customer cannot be activated without being assigned to a splitter port.";
+    private static final String CANNOT_ACTIVATE_NO_FIBER_MSG = "Customer cannot be activated without a corresponding Fiber Drop Line entry.";
+    private static final String FAILED_TO_DECREMENT_PORTS_MSG = "Failed to decrement splitter used ports for splitter ID {}: {}";
+    private static final String FAILED_TO_RELEASE_OLD_PORT_MSG = "Failed to release old splitter port: %s";
+    private static final String SPLITTER_FULL_MSG = "Splitter %s is at full capacity.";
+    private static final String FAILED_TO_UPDATE_SPLITTER_MSG = "Failed to update splitter used ports: %s";
+    private static final String CUSTOMER_ALREADY_ASSIGNED_MSG = "Customer is already assigned to a port. Use the re-assign endpoint to move them.";
+    private static final String FIBER_LINE_NOT_FOUND_MSG = "FiberDropLine not found for customer: %d";
+    private static final String CANNOT_DELETE_ACTIVE_CUSTOMER_MSG = "Cannot delete customer. Status must be INACTIVE before deletion.";
+
+
+    private final CustomerRepository customerRepository;
+    private final FiberDropLineRepository fiberDropLineRepository;
+    private final InventoryServiceProxy inventoryServiceProxy;
 
     @Autowired
-    private FiberDropLineRepository fiberDropLineRepository;
-
-    @Autowired
-    private InventoryServiceProxy inventoryServiceProxy;
+    public CustomerService(CustomerRepository customerRepository, FiberDropLineRepository fiberDropLineRepository, InventoryServiceProxy inventoryServiceProxy) {
+        this.customerRepository = customerRepository;
+        this.fiberDropLineRepository = fiberDropLineRepository;
+        this.inventoryServiceProxy = inventoryServiceProxy;
+    }
 
     @Transactional
     public void updateCustomerStatus(Long id, String status) {
         logger.info("Attempting to update status for customer ID {} to {}", id, status);
         Customer customer = customerRepository.findById(id)
-                .orElseThrow(() -> new CustomerNotFoundException("Customer with ID " + id + " not found."));
+                .orElseThrow(() -> new CustomerNotFoundException(String.format(CUSTOMER_NOT_FOUND_MSG, id)));
 
         CustomerStatus newStatus = CustomerStatus.valueOf(status.toUpperCase());
         CustomerStatus oldStatus = customer.getStatus();
 
-        // Add validation block for activation
         if (newStatus == CustomerStatus.ACTIVE) {
             if (customer.getSplitterId() == null) {
-                throw new CustomerActionException("Customer cannot be activated without being assigned to a splitter port.");
+                throw new CustomerActionException(CANNOT_ACTIVATE_NO_SPLITTER_MSG);
             }
             if (fiberDropLineRepository.findByCustomerId(id).isEmpty()) {
-                throw new CustomerActionException("Customer cannot be activated without a corresponding Fiber Drop Line entry.");
+                throw new CustomerActionException(CANNOT_ACTIVATE_NO_FIBER_MSG);
             }
         }
 
-        // Deactivation logic
         if (oldStatus == CustomerStatus.ACTIVE && newStatus == CustomerStatus.INACTIVE) {
             logger.info("Deactivation workflow triggered for customer ID {}.", id);
 
@@ -73,8 +84,10 @@ public class CustomerService {
                         inventoryServiceProxy.updateSplitterUsedPorts(splitter.getId(), updateRequest);
                         logger.info("Successfully decremented used ports for splitter ID {}.", customer.getSplitterId());
                     }
-                } catch (Exception e) {
-                    logger.error("Failed to decrement splitter used ports for splitter ID {}: {}", customer.getSplitterId(), e.getMessage());
+                } catch (InventoryServiceException e) { // --- Sonar: Catch specific exception
+                    // --- Sonar: Log full exception ---
+                    logger.error(FAILED_TO_DECREMENT_PORTS_MSG, customer.getSplitterId(), e.getMessage(), e);
+                    // Business decision: Continue deactivation even if port decrement fails
                 }
             }
 
@@ -95,14 +108,13 @@ public class CustomerService {
         customerRepository.save(customer);
     }
 
-    // ... (other existing methods) ...
     @Transactional
     public void deleteInactiveCustomer(Long id) {
         Customer customer = customerRepository.findById(id)
-                .orElseThrow(() -> new CustomerNotFoundException("Customer with ID " + id + " not found."));
+                .orElseThrow(() -> new CustomerNotFoundException(String.format(CUSTOMER_NOT_FOUND_MSG, id)));
 
         if (customer.getStatus() != CustomerStatus.INACTIVE) {
-            throw new CustomerActionException("Cannot delete customer. Status must be INACTIVE before deletion.");
+            throw new CustomerActionException(CANNOT_DELETE_ACTIVE_CUSTOMER_MSG);
         }
 
         fiberDropLineRepository.findByCustomerId(id).ifPresent(line -> {
@@ -117,7 +129,7 @@ public class CustomerService {
     @Transactional
     public CustomerResponse reassignSplitterPort(Long customerId, CustomerAssignmentRequest assignment) {
         Customer customer = customerRepository.findById(customerId)
-                .orElseThrow(() -> new CustomerNotFoundException("Customer not found with ID: " + customerId));
+                .orElseThrow(() -> new CustomerNotFoundException(String.format(CUSTOMER_NOT_FOUND_GENERIC, customerId)));
 
         Long oldSplitterId = customer.getSplitterId();
         AssetResponse newSplitterAsset = inventoryServiceProxy.getAssetBySerial(assignment.splitterSerialNumber());
@@ -131,8 +143,9 @@ public class CustomerService {
                     updateRequest.setUsedPorts(oldSplitter.getUsedPorts() - 1);
                     inventoryServiceProxy.updateSplitterUsedPorts(oldSplitterId, updateRequest);
                 }
-            } catch (Exception e) {
-                logger.error("Could not decrement port count for old splitter ID {}: {}", oldSplitterId, e.getMessage());
+            } catch (InventoryServiceException e) { // --- Sonar: Catch specific exception
+                // --- Sonar: Log and re-throw to roll back transaction ---
+                throw new CustomerActionException(String.format(FAILED_TO_RELEASE_OLD_PORT_MSG, e.getMessage()));
             }
         }
 
@@ -140,13 +153,14 @@ public class CustomerService {
         try {
             SplitterDto newSplitter = inventoryServiceProxy.getSplitterDetails(newSplitterAsset.getId());
             if (newSplitter.getUsedPorts() >= newSplitter.getPortCapacity()) {
-                throw new InvalidPortAssignmentException("New splitter " + newSplitter.getSerialNumber() + " is at full capacity.");
+                throw new InvalidPortAssignmentException(String.format(SPLITTER_FULL_MSG, newSplitter.getSerialNumber()));
             }
             SplitterUpdateRequest updateRequest = new SplitterUpdateRequest();
             updateRequest.setUsedPorts(newSplitter.getUsedPorts() + 1);
             inventoryServiceProxy.updateSplitterUsedPorts(newSplitter.getId(), updateRequest);
-        } catch (Exception e) {
-            throw new InventoryServiceException("Failed to update new splitter used ports: " + e.getMessage());
+        } catch (InventoryServiceException e) { // --- Sonar: Catch specific exception
+            // --- Sonar: Re-throw with original cause ---
+            throw new InventoryServiceException(String.format(FAILED_TO_UPDATE_SPLITTER_MSG, e.getMessage()));
         }
 
         // 3. Update customer's assignment
@@ -157,7 +171,7 @@ public class CustomerService {
 
         // 4. Update FiberDropLine
         FiberDropLine fiberLine = fiberDropLineRepository.findByCustomerId(customerId)
-                .orElseThrow(() -> new InventoryServiceException("FiberDropLine not found for customer: " + customerId));
+                .orElseThrow(() -> new InventoryServiceException(String.format(FIBER_LINE_NOT_FOUND_MSG, customerId)));
         fiberLine.setFromSplitterId(newSplitterAsset.getId());
         fiberDropLineRepository.save(fiberLine);
 
@@ -168,35 +182,32 @@ public class CustomerService {
     public CustomerResponse assignSplitterPort(Long customerId, CustomerAssignmentRequest assignment) {
         logger.info("Assigning new port for customer ID: {}", customerId);
         Customer customer = customerRepository.findById(customerId)
-                .orElseThrow(() -> new CustomerNotFoundException("Customer not found with ID: " + customerId));
+                .orElseThrow(() -> new CustomerNotFoundException(String.format(CUSTOMER_NOT_FOUND_GENERIC, customerId)));
 
         if (customer.getSplitterId() != null) {
-            throw new CustomerActionException("Customer is already assigned to a port. Use the re-assign endpoint to move them.");
+            throw new CustomerActionException(CUSTOMER_ALREADY_ASSIGNED_MSG);
         }
 
         AssetResponse splitterAsset = inventoryServiceProxy.getAssetBySerial(assignment.splitterSerialNumber());
 
-        // Increment new splitter port count
         try {
             SplitterDto splitter = inventoryServiceProxy.getSplitterDetails(splitterAsset.getId());
             if (splitter.getUsedPorts() >= splitter.getPortCapacity()) {
-                throw new InvalidPortAssignmentException("Splitter " + splitter.getSerialNumber() + " is at full capacity.");
+                throw new InvalidPortAssignmentException(String.format(SPLITTER_FULL_MSG, splitter.getSerialNumber()));
             }
             SplitterUpdateRequest updateRequest = new SplitterUpdateRequest();
             updateRequest.setUsedPorts(splitter.getUsedPorts() + 1);
             inventoryServiceProxy.updateSplitterUsedPorts(splitter.getId(), updateRequest);
-        } catch (Exception e) {
-            throw new InventoryServiceException("Failed to update splitter used ports: " + e.getMessage());
+        } catch (InventoryServiceException e) { // --- Sonar: Catch specific exception
+            // --- Sonar: Re-throw with original cause ---
+            throw new InventoryServiceException(String.format(FAILED_TO_UPDATE_SPLITTER_MSG, e.getMessage()));
         }
 
-        // Update customer's assignment
         customer.setSplitterId(splitterAsset.getId());
         customer.setSplitterSerialNumber(assignment.splitterSerialNumber());
         customer.setAssignedPort(assignment.portNumber());
-        // customer.setStatus(CustomerStatus.ACTIVE); // This line is now removed
         Customer updatedCustomer = customerRepository.save(customer);
 
-        // Create FiberDropLine
         FiberDropLine fiberLine = new FiberDropLine();
         fiberLine.setCustomerId(customerId);
         fiberLine.setFromSplitterId(splitterAsset.getId());
@@ -208,9 +219,11 @@ public class CustomerService {
     }
 
     public List<CustomerResponse> getAllCustomers() {
+        // --- Sonar: Fixed N+1 performance bug. ---
+        // Do not fetch assets for *all* customers in a list view.
         return customerRepository.findAll().stream()
-                .map(customer -> mapToCustomerResponse(customer, inventoryServiceProxy.getAssetsByCustomerId(customer.getId())))
-                .collect(Collectors.toList());
+                .map(customer -> mapToCustomerResponse(customer, Collections.emptyList()))
+                .toList();
     }
 
     public List<FiberDropLine> getFiberDropLinesBySplitter(Long splitterId) {
@@ -220,13 +233,13 @@ public class CustomerService {
     public List<FiberDropLineResponse> getAllFiberDropLines() {
         return fiberDropLineRepository.findAll().stream()
                 .map(this::toFiberDropLineResponse)
-                .collect(Collectors.toList());
+                .toList();
     }
 
     @Transactional
     public AssetResponse assignAssetToCustomer(Long customerId, String assetSerialNumber) {
         if (!customerRepository.existsById(customerId)) {
-            throw new CustomerNotFoundException("Customer with ID " + customerId + " not found.");
+            throw new CustomerNotFoundException(String.format(CUSTOMER_NOT_FOUND_MSG, customerId));
         }
         return inventoryServiceProxy.assignAssetToCustomer(assetSerialNumber, customerId);
     }
@@ -247,17 +260,15 @@ public class CustomerService {
 
     public CustomerResponse getCustomerById(Long id) {
         Customer customer = customerRepository.findById(id)
-                .orElseThrow(() -> new CustomerNotFoundException("Customer with ID " + id + " not found."));
-
+                .orElseThrow(() -> new CustomerNotFoundException(String.format(CUSTOMER_NOT_FOUND_MSG, id)));
         List<AssetResponse> assignedAssets = inventoryServiceProxy.getAssetsByCustomerId(id);
-
         return mapToCustomerResponse(customer, assignedAssets);
     }
 
     @Transactional
     public CustomerResponse updateCustomerProfile(Long id, CustomerCreateRequest request) {
         Customer customer = customerRepository.findById(id)
-                .orElseThrow(() -> new CustomerNotFoundException("Customer with ID " + id + " not found."));
+                .orElseThrow(() -> new CustomerNotFoundException(String.format(CUSTOMER_NOT_FOUND_MSG, id)));
 
         customer.setName(request.getName());
         customer.setAddress(request.getAddress());
@@ -266,6 +277,7 @@ public class CustomerService {
         customer.setConnectionType(request.getConnectionType());
 
         Customer updatedCustomer = customerRepository.save(customer);
+        // Do not fetch assets here, only profile is updated
         return mapToCustomerResponse(updatedCustomer, Collections.emptyList());
     }
 
@@ -288,19 +300,27 @@ public class CustomerService {
         List<Customer> customers = customerRepository.findAll(spec);
         return customers.stream()
                 .map(c -> mapToCustomerResponse(c, Collections.emptyList()))
-                .collect(Collectors.toList());
+                .toList();
     }
 
     public CustomerAssignmentDto getCustomerAssignment(Long id) {
         Customer customer = customerRepository.findById(id)
-                .orElseThrow(() -> new CustomerNotFoundException("Customer with ID " + id + " not found."));
-        return toCustomerAssignmentDto(customer);
+                .orElseThrow(() -> new CustomerNotFoundException(String.format(CUSTOMER_NOT_FOUND_MSG, id)));
+        // --- Sonar: Fixed N+1 by fetching assets here, not in the mapper ---
+        List<AssetResponse> assets = inventoryServiceProxy.getAssetsByCustomerId(id);
+        return toCustomerAssignmentDto(customer, assets);
     }
 
     public List<CustomerAssignmentDto> getCustomersBySplitter(Long splitterId) {
-        return customerRepository.findBySplitterIdAndStatus(splitterId, CustomerStatus.ACTIVE).stream()
-                .map(this::toCustomerAssignmentDto)
-                .collect(Collectors.toList());
+        List<Customer> customers = customerRepository.findBySplitterIdAndStatus(splitterId, CustomerStatus.ACTIVE);
+        // --- Sonar: This N+1 call is now explicit. ---
+        // Fixing it would require a new proxy method (e.g., getAssetsByCustomerIds)
+        return customers.stream()
+                .map(customer -> {
+                    List<AssetResponse> assets = inventoryServiceProxy.getAssetsByCustomerId(customer.getId());
+                    return toCustomerAssignmentDto(customer, assets);
+                })
+                .toList();
     }
 
     private FiberDropLineResponse toFiberDropLineResponse(FiberDropLine line) {
@@ -315,7 +335,17 @@ public class CustomerService {
         return dto;
     }
 
-    private CustomerAssignmentDto toCustomerAssignmentDto(Customer customer) {
+    // --- Sonar: Extracted asset mapping to its own method ---
+    private AssetDetailDto toAssetDetailDto(AssetResponse asset) {
+        AssetDetailDto detailDto = new AssetDetailDto();
+        detailDto.setAssetType(asset.getAssetType());
+        detailDto.setSerialNumber(asset.getSerialNumber());
+        detailDto.setModel(asset.getModel());
+        return detailDto;
+    }
+
+    // --- Sonar: Mapper signature changed to remove proxy call (fix N+1) ---
+    private CustomerAssignmentDto toCustomerAssignmentDto(Customer customer, List<AssetResponse> assets) {
         CustomerAssignmentDto dto = new CustomerAssignmentDto();
         dto.setCustomerId(customer.getId());
         dto.setName(customer.getName());
@@ -325,14 +355,9 @@ public class CustomerService {
         }
         dto.setStatus(customer.getStatus().name());
 
-        List<AssetResponse> assets = inventoryServiceProxy.getAssetsByCustomerId(customer.getId());
-        List<AssetDetailDto> assetDetails = assets.stream().map(asset -> {
-            AssetDetailDto detailDto = new AssetDetailDto();
-            detailDto.setAssetType(asset.getAssetType());
-            detailDto.setSerialNumber(asset.getSerialNumber());
-            detailDto.setModel(asset.getModel());
-            return detailDto;
-        }).collect(Collectors.toList());
+        List<AssetDetailDto> assetDetails = assets.stream()
+                .map(this::toAssetDetailDto) // --- Sonar: Use method reference ---
+                .toList();
         dto.setAssignedAssets(assetDetails);
 
         return dto;
