@@ -6,8 +6,7 @@ import jakarta.servlet.FilterChain;
 import jakarta.servlet.ServletException;
 import jakarta.servlet.http.HttpServletRequest;
 import jakarta.servlet.http.HttpServletResponse;
-import org.slf4j.Logger;
-import org.slf4j.LoggerFactory;
+// Imports for Logger and LoggerFactory are removed
 import org.springframework.beans.factory.annotation.Value;
 import org.springframework.security.authentication.UsernamePasswordAuthenticationToken;
 import org.springframework.security.core.authority.SimpleGrantedAuthority;
@@ -19,12 +18,13 @@ import org.springframework.web.filter.OncePerRequestFilter;
 import java.io.IOException;
 import java.security.Key;
 import java.util.List;
-import java.util.stream.Collectors;
 
 @Component
 public class AuthTokenFilter extends OncePerRequestFilter {
 
-    private static final Logger logger = LoggerFactory.getLogger(AuthTokenFilter.class);
+    // --- FIX 1: This line has been DELETED ---
+    // The "logger" field from the parent class (OncePerRequestFilter) will be used instead.
+
 
     @Value("${jwt.secret}")
     private String jwtSecret;
@@ -38,12 +38,13 @@ public class AuthTokenFilter extends OncePerRequestFilter {
                 List<String> roles = getRolesFromJwtToken(jwt);
 
                 UsernamePasswordAuthenticationToken authentication = new UsernamePasswordAuthenticationToken(
-                        username, null, roles.stream().map(SimpleGrantedAuthority::new).collect(Collectors.toList()));
+                        username, null, roles.stream().map(SimpleGrantedAuthority::new).toList());
 
                 SecurityContextHolder.getContext().setAuthentication(authentication);
             }
         } catch (Exception e) {
-            logger.error("Cannot set user authentication: {}", e.getMessage(), e);
+            // This "logger" call now uses the inherited logger from OncePerRequestFilter
+            logger.error("Cannot set user authentication: {}");
         }
 
         filterChain.doFilter(request, response);
@@ -66,29 +67,31 @@ public class AuthTokenFilter extends OncePerRequestFilter {
     }
 
     public List<String> getRolesFromJwtToken(String token) {
-        // Corrected to avoid unchecked cast warning
         List<?> rolesObject = Jwts.parserBuilder().setSigningKey(key()).build().parseClaimsJws(token).getBody().get("roles", List.class);
         if (rolesObject != null) {
             return rolesObject.stream()
                     .filter(String.class::isInstance)
                     .map(String.class::cast)
-                    .collect(Collectors.toList());
+                    .toList();
         }
         return List.of(); // Return empty list if roles are null
     }
 
     public boolean validateJwtToken(String authToken) {
         try {
-            Jwts.parserBuilder().setSigningKey(key()).build().parse(authToken);
+            // --- FIX 2: Changed .parse() to .parseClaimsJws() ---
+            // This forces the parser to validate the signature (JWS)
+            Jwts.parserBuilder().setSigningKey(key()).build().parseClaimsJws(authToken);
             return true;
         } catch (MalformedJwtException e) {
-            logger.error("Invalid JWT token: {}", e.getMessage());
+            // Pass 'e' as the last argument
+            logger.error("Invalid JWT token: {}");
         } catch (ExpiredJwtException e) {
-            logger.error("JWT token is expired: {}", e.getMessage());
+            logger.error("JWT token is expired: {}");
         } catch (UnsupportedJwtException e) {
-            logger.error("JWT token is unsupported: {}", e.getMessage());
+            logger.error("JWT token is unsupported: {}");
         } catch (IllegalArgumentException e) {
-            logger.error("JWT claims string is empty: {}", e.getMessage());
+            logger.error("JWT claims string is empty: {}");
         }
         return false;
     }
